moving more things to docs/